--- a/deno.json
+++ b/deno.json
@@ -42,6 +42,7 @@
     "jsxImportSource": "preact"
   },
   "imports": {
+    "@preact/compat": "npm:@preact/compat@^18.3.1",
     "@std/toml": "jsr:@std/toml@^1.0.11",
     "@std/yaml": "jsr:@std/yaml@^1.0.11",
     "preact": "npm:preact@10.28.3",
